Bluethooth commands added

--- a/VersaSens_FW/prj.conf
+++ b/VersaSens_FW/prj.conf
@@ -93,7 +93,7 @@ CONFIG_USB_COMPOSITE_DEVICE=y
 
 # CONFIG_GPIO=y
 # CONFIG_LOG=y
-# CONFIG_CONSOLE=y
-# CONFIG_RTT_CONSOLE=y
-# CONFIG_USE_SEGGER_RTT=y
-# CONFIG_UART_CONSOLE=n
+CONFIG_CONSOLE=y
+CONFIG_RTT_CONSOLE=y
+CONFIG_USE_SEGGER_RTT=y
+CONFIG_UART_CONSOLE=n
